--- a/projects/ui/package.json
+++ b/projects/ui/package.json
@@ -1,16 +1,18 @@
 {
   "name": "arc58-wallet-w-passkeys",
+  "type": "module",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "init": "tsx --env-file=.env.template init.ts",
     "lint": "next lint"
   },
   "dependencies": {
     "@agoralabs-sh/avm-web-provider": "^1.7.0",
-    "@algorandfoundation/algokit-utils": "8.0.3",
+    "@algorandfoundation/algokit-utils": "^9.0.0",
     "@blockshake/defly-connect": "1.2.1",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.4",
@@ -41,6 +43,7 @@
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "tsx": "^4.19.3"
   }
 }
