--- a/projects/contracts/.algokit.toml
+++ b/projects/contracts/.algokit.toml
@@ -11,7 +11,7 @@ path = ".algokit/generators/create_env_file"
 
 [project]
 type = 'contract'
-name = 'smart-wallet-for-agent-to-agent-interaction'
+name = 'contracts'
 artifacts = 'smart_contracts/artifacts'
 
 [project.deploy]
