--- a/projects/ui/.algokit.toml
+++ b/projects/ui/.algokit.toml
@@ -5,3 +5,6 @@ min_version = "v2.0.0"
 type = "frontend"
 name = 'ui'
 artifacts = "src/contracts"
+
+[project.run]
+build = { commands = ['npm run build'], description = 'Build frontend' }
