--- a/projects/mcp-server/package.json
+++ b/projects/mcp-server/package.json
@@ -22,7 +22,9 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.39.0",
     "@modelcontextprotocol/sdk": "^1.8.0",
+    "dotenv": "^16.4.7",
     "zod": "^3.24.2"
   }
 }
