--- a/projects/ui/.env.template
+++ b/projects/ui/.env.template
@@ -31,3 +31,5 @@ NEXT_PUBLIC_INDEXER_NETWORK="localnet"
 NEXT_PUBLIC_OPTIN_PLUGIN_ID=<REPLACE_WITH_OPTIN_PLUGIN_ID>
 NEXT_PUBLIC_LISTING_FACTORY_ID=<REPLACE_WITH_LISTING_FACTORY_ID>
 NEXT_PUBLIC_MARKETPLACE_PLUGIN_ID=<REPLACE_WITH_MARKETPLACE_PLUGIN_ID>
+
+NEXT_PUBLIC_AGENT_ADDRESS=<REPLACE_WITH_AGENT_ADDRESS>
