--- a/projects/ui/package.json
+++ b/projects/ui/package.json
@@ -21,9 +21,10 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@tanstack/react-query": "5.59.0",
-    "@txnlab/use-wallet-react": "^4.0.0-beta.5",
+    "@txnlab/use-wallet-react": "^4.0.1",
     "@walletconnect/modal": "^2.7.0",
     "@walletconnect/sign-client": "^2.19.2",
+    "algosdk": "^3.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.13",
@@ -44,7 +45,7 @@
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "tsx": "^4.19.3"
+    "tsx": "^4.19.3",
+    "typescript": "^5"
   }
 }
