--- a/projects/mcp-server/tsconfig.json
+++ b/projects/mcp-server/tsconfig.json
@@ -10,6 +10,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["index.ts", "mcp-server.ts"],
+  "include": ["**/*.ts"],
   "exclude": ["node_modules"]
 }
