--- a/projects/mcp-server/.env.template
+++ b/projects/mcp-server/.env.template
@@ -3,3 +3,4 @@ ANTHROPIC_API_KEY=<REPLACE_WITH_ANTHROPIC_API_KEY>
 LISTING_FACTORY_ID=<REPLACE_WITH_LISTING_FACTORY_ID>
 OPTIN_PLUGIN_ID=<REPLACE_WITH_OPTIN_PLUGIN_ID>
 MARKETPLACE_PLUGIN_ID=<REPLACE_WITH_MARKETPLACE_PLUGIN_ID>
+SELLER_SMART_WALLET_APP_ID=<REPLACE_WITH_SELLER_SMART_WALLET_APP_ID>
