--- a/projects/mcp-client/package.json
+++ b/projects/mcp-client/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "tsc && chmod 755 build/index.js",
+    "generate:app-clients": "algokit project link --all",
+    "build": "npm run generate:app-clients && tsc && chmod 755 build/index.js",
     "watch": "tsc --watch",
     "dev": "npm run build && nodemon build/index.js ../mcp-server/build/index.js",
     "start": "node build/index.js ../mcp-server/build/index.js"
